gitops/websites/distrojeff/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deploy
  namespace: distrojeff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: distrojeff-web
  template:
    metadata:
      labels:
        app: distrojeff-web
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: registry.rupan.dev/apps/distrojeff-site@sha256:755f5125ca78494a88b138e255c521ec4391d07a01fb34607d56d0b81dee40e4  # yamllint disable-line rule:line-length
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /run
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: run
          emptyDir: {}
